Fixes off-center bug

--- a/src/Body/Header/Header.css
+++ b/src/Body/Header/Header.css
@@ -2,6 +2,7 @@
   background-color: black;
   position: fixed;
   top: 0px;
+  left: 0px;
   width: 100%;
   /* padding: 10px 0 20px 0; */
   z-index: 1000;
