--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -2,6 +2,7 @@
     background-color: black;
     position: fixed;
     bottom: 0px;
+    left: 0px;
     width: 100%;
     padding: 10px 0 20px 0;
 }
